Omnibox UI Refresh: Implement textfield jogging behind a flag

This implements the previously-removed textfield jogging behavior
behind a feature flag accessible from chrome://flags.

Followup work: We may implement a special accommodation to the jog flag
to make the keystroke-backspace case less jarring of a transition.

Bug: 868157
Change-Id: I63fbb8f8f171f1d5ccf09f1cd92332963f567ae3
Reviewed-on: https://chromium-review.googlesource.com/1152459
Commit-Queue: Tommy Li <tommycli@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578666}
Former-commit-id: cc5e5302e3ffda76e9ef8899232ba49edb267b71