chrome/browser/flag_descriptions.h
@@ -784,6 +784,9 @@ extern const char kOmniboxUIElideSuggestionUrlAfterHostDescription[];
 extern const char kOmniboxUIHideSteadyStateUrlSchemeAndSubdomainsName[];
 extern const char kOmniboxUIHideSteadyStateUrlSchemeAndSubdomainsDescription[];
 
+extern const char kOmniboxUIJogTextfieldOnPopupName[];
+extern const char kOmniboxUIJogTextfieldOnPopupDescription[];
+
 extern const char kOmniboxUIMaxAutocompleteMatchesName[];
 extern const char kOmniboxUIMaxAutocompleteMatchesDescription[];
 
